watchdog ChangeLog
Carlos Rueda - MMI/MBARI

2010-09-20
	CF generation changes (upon email exchange with Nan G. today)
	- skos:definition now used (instead of rdfs:comment)
	- rdfs:comment not generated anymore
	- rdfs:label not generated anymore 
	- skos:prefLabel not generated for the moment (may be again later)
	So, each standard name gets generated as follows:
      <Standard_Name rdf:about="__the_std_name_here__">
        <skos:definition>__the_description_here__</skos:definition>
        <canonical_units>__the_units_here__</canonical_units>
      </Standard_Name>	


2010-08-20
	- just updated dependency on iserver module:
		<dependency>
			<groupId>org.mmisw</groupId>
			<artifactId>iserver</artifactId>
			<version>1.9.95.alpha-SNAPSHOT</version>
		</dependency>
	  ``mvn clean install'' and ``mvn exec:java -Dexec.args="Cf --ws workspace/cf"'' --> OK. 
	
2010-08-09
	- More SWEET preparations. See workspace/sweet/README.txt
	- SweetTest now only about comparing original SWEET and registered ontologies.
	  Running with a couple of cases (from within eclipse).
	  TODO: set up ``maven test'' appropriately.
	  
	  
2010-08-06
	- Further code re-organization. Preparations for UDUnits and SWEET.
	
	- New  main program org.mmisw.watchdog.Watchdog, which dispatches one of the available
	  programs: Cf, Udunits, Sweet.
	  
	- Added dependency on iserver-core in the pom.xml.  This jar is created from the 
	  iserver module.  (Removed WUtil, which replicated utilities already
	  provided by iserver.)
	  
	
2010-08-05
	- Overall code re-organization and several interface/class renamings as preparation 
	  to incorporate conversion of other vocabularies.
	
2010-07-25
	- better report about contents of input vocabulary.
	
	- CfConverterSkosApi: TOP_CONCEPT = "parameter" (previously, "Standard_Name")
	  "Standard_Name" is not generated at all.
	  Note that CfConverterJena does generate "Standard_Name" as subClassOf skos:Concept.
	  
	- Tested some queries like the following: